force-app/main/default/staticresources/python/Disappear/src/objects/Organization__c.object
<CustomObject>
    <fields>
        <fullName>LegacyCreatedBy__c</fullName>
        <label>Legacy Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedBy__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentOrgId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self Relationship</description>
        <label>Parent Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Related Organisation</relationshipLabel>
        <relationshipName>RelatedOrg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsorOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsor Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amgen Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Publisher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <label>Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>SponsorOrg__c</columns>
        <columns>isLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>